github: add check-docker-syntax workflow
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/ara-server/Containerfile
+++ b/ara-server/Containerfile
@@ -4,6 +4,7 @@ FROM pypy:3.7-slim as builder
 
 COPY files/requirements.txt /requirements.txt
 
+# hadolint ignore=DL3008,DL3013,SC2086
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
       build-essential \
@@ -27,13 +28,14 @@ COPY --from=builder /wheels /wheels
 COPY files/requirements.txt /requirements.txt
 COPY files/run.sh /run.sh
 
+# hadolint ignore=DL3008,SC2102
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
       curl \
       libmariadb3 \
-    && python3 -m pip --no-cache-dir install -U 'pip==21.0.1' \
-    && python3 -m pip install --no-index --find-links=/wheels -r /requirements.txt \
-    && python3 -m pip install --no-index --find-links=/wheels ara[server] \
+    && python3 -m pip install --no-cache-dir -U 'pip==21.0.1' \
+    && python3 -m pip install --no-cache-dir --no-index --find-links=/wheels -r /requirements.txt \
+    && python3 -m pip install --no-cache-dir --no-index --find-links=/wheels ara[server] \
     && useradd ara-server \
     && chmod +x /wait \
     && rm -rf /var/lib/apt/lists/* /wheels /requirements.txt \
