--- a/awxclient/Containerfile
+++ b/awxclient/Containerfile
@@ -13,6 +13,7 @@ COPY files/requirements.txt /requirements.txt
 COPY files/run.sh /run.sh
 COPY files/run.yml /run.yml
 
+# hadolint ignore=DL3008
 RUN apk add --no-cache \
       dumb-init \
       libstdc++ \
