github: fix paths
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-ara-server-container-image.yml
+++ b/.github/workflows/build-ara-server-container-image.yml
@@ -8,11 +8,11 @@ name: Build ara-server container image
   push:
     paths:
       - .github/workflows/build-ara-server-container-image.yml
-      - ara-server/Containerfile
+      - ara-server/**
   pull_request:
     paths:
       - .github/workflows/build-ara-server-container-image.yml
-      - ara-server/Containerfile
+      - ara-server/**
 
 jobs:
 
