--- a/.github/workflows/build-patchman-container-image.yml
+++ b/.github/workflows/build-patchman-container-image.yml
@@ -8,11 +8,11 @@ name: Build patchman container image
   push:
     paths:
       - .github/workflows/build-patchman-container-image.yml
-      - patchman/Containerfile
+      - patchman/**
   pull_request:
     paths:
       - .github/workflows/build-patchman-container-image.yml
-      - patchman/Containerfile
+      - patchman/**
 
 jobs:
 
