--- a/ceph-daemon/Containerfile
+++ b/ceph-daemon/Containerfile
@@ -1,5 +1,5 @@
 ARG VERSION
-FROM quay.io/ceph/daemon:$VERSION
+FROM quay.io/ceph/daemon:$VERSION-centos-8-x86_64
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
