netbox: use v3.1.0-ldap
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/netbox/Containerfile
+++ b/netbox/Containerfile
@@ -1,5 +1,5 @@
-ARG VERSION=v3.0.10-ldap
-FROM netboxcommunity/netbox:${VERSION}
+ARG VERSION=v3.1.0-ldap
+FROM quay.io/netboxcommunity/netbox:${VERSION}
 
 COPY requirements.txt /requirements.txt
 
