github: run branch builds on main only
osism/issues#85

Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-ara-server-container-image.yml
+++ b/.github/workflows/build-ara-server-container-image.yml
@@ -9,6 +9,8 @@ name: Build ara-server container image
     paths:
       - .github/workflows/build-ara-server-container-image.yml
       - ara-server/**
+    branches:
+      - main
   pull_request:
     paths:
       - .github/workflows/build-ara-server-container-image.yml
