github: add missing DOCKER_SLIM
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-ara-server-container-image.yml
+++ b/.github/workflows/build-ara-server-container-image.yml
@@ -54,6 +54,7 @@ jobs:
           scripts/push.sh
         env:
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+          DOCKER_SLIM: true
           IMAGE: ara-server
           REPOSITORY: osism/ara-server
           VERSION: ${{ matrix.version }}
