--- a/.github/workflows/build-cephclient-container-image.yml
+++ b/.github/workflows/build-cephclient-container-image.yml
@@ -25,6 +25,7 @@ jobs:
         version:
           - octopus
           - pacific
+          - quincy
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
