--- a/.github/workflows/build-cephclient-container-image.yml
+++ b/.github/workflows/build-cephclient-container-image.yml
@@ -54,6 +54,8 @@ jobs:
           scripts/push.sh
         env:
           DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
           IMAGE: cephclient
           REPOSITORY: osism/cephclient
           VERSION: ${{ matrix.version }}
