openstackclient: install osprofiler package
Necessary to get results from osprofiler

Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/openstackclient/files/requirements.txt
+++ b/openstackclient/files/requirements.txt
@@ -2,6 +2,7 @@ aodhclient
 gnocchiclient
 keystoneauth-oidc
 osc-placement
+osprofiler
 prometheus-client
 python-barbicanclient
 python-blazarclient
