ara-server: use slim python base image
This reduces the image size by about 100 MByte.

Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/ara-server/Containerfile
+++ b/ara-server/Containerfile
@@ -1,4 +1,4 @@
-FROM python:3.9 as builder
+FROM python:3.9-slim as builder
 
 ARG VERSION=latest
 
@@ -18,7 +18,7 @@ RUN echo $VERSION && apt-get update \
     && python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels -r /requirements.txt \
     && if [ $VERSION != "latest" ]; then python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels "ara[server]==$VERSION"; else python3 -m pip wheel --wheel-dir=/wheels --no-cache-dir "ara[server]"; fi
 
-FROM python:3.9
+FROM python:3.9-slim
 
 ENV TZ=UTC
 
