openstackclient: add zed future release
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-openstackclient-container-image.yml
+++ b/.github/workflows/build-openstackclient-container-image.yml
@@ -26,6 +26,7 @@ jobs:
           - wallaby
           - xena
           - yoga
+          - zed
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
