--- a/.github/workflows/build-virtualbmc-container-image.yml
+++ b/.github/workflows/build-virtualbmc-container-image.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         version:
-          - 2.2.0
+          - 2.2.0  # renovate: datasource=pypi depName=virtualbmc
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
