patchman: install package from pypi
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-patchman-container-image.yml
+++ b/.github/workflows/build-patchman-container-image.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         version:
-          - latest
+          - 2.0.3  # renovate: datasource=pypi depName=patchman
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
