--- a/patchman/Containerfile
+++ b/patchman/Containerfile
@@ -9,16 +9,14 @@ ENV PYTHONUNBUFFERED=1
 
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.9.0/wait /wait
 
-COPY files/local_settings.py /etc/patchman/local_settings.py
-COPY files/requirements.txt /requirements.txt
-COPY files/run.sh /run.sh
 COPY files/fixtures.json /fixtures.json
+COPY files/local_settings.py /etc/patchman/local_settings.py
+COPY files/run.sh /run.sh
 
-# hadolint ignore=DL3018
+# hadolint ignore=DL3013,DL3018
 RUN apt-get update \
     && apt-get install --no-install-recommends -y \
       curl \
-      git \
       python3-apt \
       python3-dev \
       libmagic1 \
@@ -28,29 +26,18 @@ RUN apt-get update \
     && rm -rf \
       /var/lib/apt/lists/* \
       /var/tmp/* \
-    && chmod +x /wait
-
-RUN if [ $VERSION = "latest" ]; then git clone https://github.com/furlongm/patchman.git /repository; fi \
-    && if [ $VERSION != "latest" ]; then git clone -b v$VERSION https://github.com/furlongm/patchman.git /repository; fi
-
-# hadolint ignore=DL3013
-RUN pip3 install --no-cache-dir --upgrade pip \
-    && pip3 install --no-cache-dir -r /repository/requirements.txt \
-    && pip3 install --no-cache-dir -r /requirements.txt \
-    && pip3 install --no-cache-dir /repository \
-    && ln -s /usr/lib/python3/dist-packages/*apt* /usr/local/lib/python3.9/site-packages
-
-RUN useradd patchman \
+    && chmod +x /wait \
+    && python3 -m pip --no-cache-dir install -U 'pip==22.0.4' \
+    && python3 -m pip --no-cache-dir install 'patchman==2.0.3'\
+    && ln -s /usr/lib/python3/dist-packages/*apt* /usr/local/lib/python3.9/site-packages \
+    && useradd patchman \
     && chown patchman: /etc/patchman/local_settings.py \
     && mkdir -p /var/lib/patchman/db \
     && lib=$(python3 -c "import site; print(site.getsitepackages()[0])") \
     && mkdir -p "$lib/run/static" \
-    && chown -R patchman: /var/lib/patchman "$lib/run/static"
-
-RUN apt-get remove -y \
-      git \
-      python3-dev \
-    && rm -rf /repository /requirements.txt
+    && chown -R patchman: /var/lib/patchman "$lib/run/static" \
+    && apt-get remove -y \
+      python3-dev
 
 USER patchman
 WORKDIR /
