--- a/patchman/Containerfile
+++ b/patchman/Containerfile
@@ -28,7 +28,7 @@ RUN apt-get update \
       /var/tmp/* \
     && chmod +x /wait \
     && python3 -m pip --no-cache-dir install -U 'pip==22.0.4' \
-    && python3 -m pip --no-cache-dir install 'patchman==2.0.3'\
+    && python3 -m pip --no-cache-dir install 'patchman[postgres]==2.0.3'\
     && ln -s /usr/lib/python3/dist-packages/*apt* /usr/local/lib/python3.9/site-packages \
     && useradd patchman \
     && chown patchman: /etc/patchman/local_settings.py \
