ara-server: install latest from git
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-ara-server-container-image.yml
+++ b/.github/workflows/build-ara-server-container-image.yml
@@ -23,6 +23,7 @@ jobs:
     strategy:
       matrix:
         version:
+          - latest
           - 1.5.8
     steps:
       - name: Checkout code
