--- a/ara-server/Containerfile
+++ b/ara-server/Containerfile
@@ -9,6 +9,7 @@ RUN echo $VERSION && apt-get update \
     && apt-get install -y --no-install-recommends \
       build-essential \
       gcc \
+      git \
       libffi-dev \
       libmariadb-dev \
       libssl-dev \
@@ -16,9 +17,11 @@ RUN echo $VERSION && apt-get update \
     && mkdir /wheels \
     && python3 -m pip install --no-cache-dir -U pip \
     && python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels -r /requirements.txt \
-    && if [ $VERSION != "latest" ]; then python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels "ara[server]==$VERSION"; else python3 -m pip wheel --wheel-dir=/wheels --no-cache-dir "ara[server]"; fi
+    && if [ $VERSION != "latest" ]; then python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels "ara[server]==$VERSION"; else python3 -m pip wheel --wheel-dir=/wheels --no-cache-dir "git+https://github.com/ansible-community/ara"; fi
 
 FROM python:3.10-slim
+
+ARG VERSION=latest
 
 ENV TZ=UTC
 
@@ -35,7 +38,7 @@ RUN apt-get update \
       libmariadb3 \
     && python3 -m pip install --no-cache-dir -U pip \
     && python3 -m pip install --no-cache-dir --no-index --find-links=/wheels -r /requirements.txt \
-    && python3 -m pip install --no-cache-dir --no-index --find-links=/wheels ara[server] \
+    && if [ $VERSION != "latest" ]; then python3 -m pip install --no-cache-dir --no-index --find-links=/wheels ara[server]; else python3 -m pip install --no-cache-dir --no-index --find-links=/wheels ara; fi \
     && useradd ara-server \
     && chmod +x /wait \
     && rm -rf /var/lib/apt/lists/* /wheels /requirements.txt
