--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,8 @@
 {
   "extends": [
     "github>osism/renovate-config",
-    "github>osism/renovate-config:docker"
+    "github>osism/renovate-config:docker",
+    "github>osism/renovate-config:python"
   ],
   "regexManagers":[
     {
