--- a/ara-server/Containerfile
+++ b/ara-server/Containerfile
@@ -15,7 +15,7 @@ RUN echo $VERSION && apt-get update \
       libssl-dev \
       libyaml-dev \
     && mkdir /wheels \
-    && python3 -m pip install --no-cache-dir -U pip \
+    && python3 -m pip install --no-cache-dir -U 'pip==22.0.4' \
     && python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels -r /requirements.txt \
     && if [ $VERSION != "latest" ]; then python3 -m pip wheel --no-cache-dir --wheel-dir=/wheels "ara[server]==$VERSION"; else python3 -m pip wheel --wheel-dir=/wheels --no-cache-dir "git+https://github.com/ansible-community/ara"; fi
 
@@ -36,7 +36,7 @@ RUN apt-get update \
     && apt-get install -y --no-install-recommends \
       curl \
       libmariadb3 \
-    && python3 -m pip install --no-cache-dir -U pip \
+    && python3 -m pip install --no-cache-dir -U 'pip==22.0.4' \
     && python3 -m pip install --no-cache-dir --no-index --find-links=/wheels -r /requirements.txt \
     && if [ $VERSION != "latest" ]; then python3 -m pip install --no-cache-dir --no-index --find-links=/wheels ara[server]; else python3 -m pip install --no-cache-dir --no-index --find-links=/wheels ara; fi \
     && useradd ara-server \
