--- a/.github/workflows/build-netbox-container-image.yml
+++ b/.github/workflows/build-netbox-container-image.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         version:
-          - v3.2.1-ldap
+          - v3.2.1-ldap  # renovate: datasource=docker depName=quay.io/netboxcommunity/netbox
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
