renovate: add missing \n
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -10,7 +10,7 @@
         "^\\.github\\/workflows\\/build-.*\\.yml"
       ],
       "matchStrings":[
-        "- (?<currentValue>.*?)  # renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)"
+        "- (?<currentValue>.*?)  # renovate: datasource=(?<datasource>.*?) depName=(?<depName>.*?)\n"
      ]
     }
   ]
