--- a/.github/workflows/build-nexus-container-image.yml
+++ b/.github/workflows/build-nexus-container-image.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         version:
-          - 3.38.0
+          - 3.38.0  # renovate: datasource=docker depName=sonatype/nexus3
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
