ara-server: update version with renovate
Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/.github/workflows/build-ara-server-container-image.yml
+++ b/.github/workflows/build-ara-server-container-image.yml
@@ -24,7 +24,7 @@ jobs:
       matrix:
         version:
           - latest
-          - 1.5.8
+          - 1.5.8  # renovate: datasource=pypi depName=ara
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
