--- a/.github/workflows/build-ceph-daemon-container-image.yml
+++ b/.github/workflows/build-ceph-daemon-container-image.yml
@@ -24,6 +24,7 @@ jobs:
       matrix:
         version:
           - v6.0.8-stable-6.0-pacific
+          - v7.0.0-stable-7.0-quincy
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
